--- a/views/index.html
+++ b/views/index.html
@@ -1,16 +1,26 @@
 {{ block "index" . }}
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>HTMX</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://unpkg.com/htmx.org@2.0.4"
+      integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
-    Count {{ .Count }}
-</body>
+  <body>
+    <div id="count">{{ template "count" .}}</div>
 
+    <button hx-target="#count" hx-post="/count">Count</button>
+  </body>
 </html>
+
 {{ end }}
+
+<!--  -->
+
+{{ block "count" . }} Count {{ .Count }} {{ end }}
